# EVA-Mobile-clean

./: .env.example  .gitignore  README.md  build_incremental.ps1  deploy.ps1  firebase.json  pubspec.yaml
android/: build.gradle.kts  gradle.properties  sha1_clean.txt  signing_report.txt
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  whisper.cpp
android/gradle/wrapper/: gradle-wrapper.properties
assets/sounds/: README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/core/config/: app_config.dart
lib/core/constants/: assets.dart  colors.dart  material.dart  text_styles.dart
lib/core/localization/: translations.dart
lib/core/router/: app_router.dart
lib/providers/: auth_provider.dart  call_provider.dart  language_provider.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
test/: config_test.dart  profile_screen_bug_test.dart  profile_screen_test.dart  widget_test.dart
test/installation/: project_structure_test.dart
test/integration/: auth_flow_test.dart
test/unit/: app_config_test.dart  auth_provider_test.dart  storage_service_test.dart
test/widget/: custom_button_test.dart  elderly_friendly_text_test.dart  login_screen_test.dart  pulsing_button_test.dart
web/: debug.html  firebase-messaging-sw.js  index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+40 files in other folders)
